@@ -1,5 +1,4 @@
 - https://github.com/kraflab/mbf21/blob/master/docs/spec.md
-- https://www.doomworld.com/forum/post/2250857
 - Finish adding new Extended table data (take from Doom Retro).
     - Thing projectilePassHeight
 - Add table data for new Doom Retro fields (take from Doom Retro info.c).
